testsuite/tests/parser/should_fail/NoBlockArgumentsFailArrowCmds.stderr

NoBlockArgumentsFailArrowCmds.hs:7:27: error:
    Unexpected lambda command in function application:
        \ () -> () >- returnA
    You could write it with parentheses
    Or perhaps you meant to enable BlockArguments?
